--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
     <input type="text"  id="inp" placeholder="Enter Your Reciepe">
     <div id="container"></div>
 </body>
-<script src="closure.js"></script>
+<script src="index.js"></script>
 </html>
